--- a/package.json
+++ b/package.json
@@ -7,10 +7,14 @@
     "dev": "ts-node main.ts"
   },
   "devDependencies": {
-    "@types/express": "^5.0.0"
+    "@types/express": "^5.0.0",
+    "@types/sqlite3": "^3.1.11",
+    "prisma": "^6.5.0"
   },
   "dependencies": {
+    "@prisma/client": "^6.5.0",
     "express": "^4.21.2",
+    "sqlite3": "^5.1.7",
     "typescript": "^5.8.2"
   }
 }
